# web_7

./: config.ini  my_select.py  pyproject.toml  seed.py
CRUD/: config.ini  main.py  signup.py
CRUD/database/: db.py  models.py  repository.py
migrations/versions/: 162c59f55251_init.py  f01e0d104242_init.py
src/: models.py
